--- a/lambda-mud/package.json
+++ b/lambda-mud/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "react-scripts": "2.0.5"
+    "react-router": "^4.3.1",
+    "react-scripts": "2.0.5",
+    "router": "^1.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
