--- a/lambda-mud/package.json
+++ b/lambda-mud/package.json
@@ -6,8 +6,11 @@
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
-    "router": "^1.3.3"
+    "reactstrap": "^6.5.0",
+    "router": "^1.3.3",
+    "styled-components": "^4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
