--- a/lambda-mud/package.json
+++ b/lambda-mud/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "pusher-js": "^4.3.1",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
+    "react-pusher": "^0.2.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
